--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -152,17 +152,17 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-8"> -->
           <%= yield %>
-        </div>
+        <!-- </div>
 		    <div class="col-sm-4">
 		      <div class="slidebar">
           </div>
 		    </div>
 		  </div>
-    </div>
+    </div> -->
 
   </body>
 </html>
