--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,37 @@
-<h1>eSports</h1>
+<div class="container" style="margin-top: -20px; background-color: #000000; width: 1300px;">
+	<div class="row">
+    <div class="col-lg-4" style="margin-right: 0px;">
+      <nav class="nav-sidebar" class="pre-scrollable">
+        <ul class="nav" class="pre-scrollable">
+          <li><a class="text-bold">Upcoming Events</a></li>
+          <li><a><img src="/images/Counter-strike Global Offensive.jpg" class="img-fluid" /></a></li>
+          <li><a class="text-main">Cloud9 vs NiP</a></li>
+          <li><a class="text-main">Galaxy vs iPhone</a></li>
+          <li><a class="text-main">Cloud9 vs Galaxy</a></li>
+          <li><a><img src="/images/League of Legends.png" class="img-fluid"/></a></li>
+          <li><a class="text-main">SKT T1 vs Team Solomid</a></li>
+          <li><a class="text-main">SKT T1 vs NiP</a></li>
+          <li><a class="text-main">iPhone vs NiP</a></li>
+          <li><a class="text-main">Cloud9 vs Misfits</a></li>
+          <li><a><img src="/images/Overwatch.jpg" class="img-fluid"/></a></li>
+          <li><a class="text-main">TeamEnvyUs vs Misfits</a></li>
+          <li><a class="text-main">Cloud9 vs Misfits</a></li>
+          <li><a class="text-main">Cloud9 vs iPhone</a></li>
+
+          <!-- <li class="nav-divider"></li> -->
+          <!-- <li><a href="javascript:;"><i class="glyphicon glyphicon-off"></i> Sign in</a></li> -->
+        </ul>
+      </nav>
+    </div>
+    <div class="col-lg-8">
+      <img src="/images/Cup.png" class="img-cup"/>
+      <p class="text-main"> Main Event</p>
+      <p class="text-bold"> December 25-30, 2016</p>
+      <p class="text-main"> G-play Civic Center</p>
+      <img src="/images/Intel_Sponsor2.jpg" class="img-intel"/>
+      <img src="/images/EVGA_Sponsor1.jpg" class="img-intel"/>
+      <img src="/images/Logitech_Sponsor3.png" class="img-intel"/>
+      <img src="/images/EA-Sponsor4.jpeg" class="img-intel"/>
+    </div>
+  </div>
+</div>
