--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -5,23 +5,26 @@
 <table>
   <thead>
     <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
       <th>Ign</th>
-      <th>Age</th>
-      <th>Country</th>
       <th>In game role</th>
+      <th>Country</th>
+      <th>Age</th>
       <th>Team</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @players.each do |player| %>
+    <% @players.each do |player|; user = user = User.where(player_id: player.id).first %>
       <tr>
+        <td><%= user.first_name %></td>
+        <td><%= user.last_name %></td>
         <td><%= player.ign %></td>
-        <td><%= player.age %></td>
-        <td><%= player.country %></td>
         <td><%= player.in_game_role %></td>
-        <td><%= player.team %></td>
+        <td><%= player.country %></td>
+        <td><%= player.age %></td>
+        <td><%= Team.where(id: player.team_id).first.team_name %></td>
         <td><%= link_to 'Show', player %></td>
       </tr>
     <% end %>
