--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Ign:</strong>
-  <%= @player.ign %>
-</p>
+<% user = User.where(player_id: @player.id).first %>
 
+<h2><%= @player.ign %></h2>
+
+<h4><%= user.first_name %> <%= user.last_name %></h4>
 <p>
   <strong>Age:</strong>
   <%= @player.age %>
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Team:</strong>
-  <%= @player.team %>
+  <%= Team.where(id: @player.team_id).first.team_name %>
 </p>
 
-<%= link_to 'Back', players_path %>
+<%= link_to 'All Players', players_path %>
