--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,91 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "homepage";
+
+//From Scaffolds
+
+body {
+  background-color: #fff;
+  color: #333;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  //margin: 33px;
+}
+
+p, ol, ul, td {
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  margin: 33px;
+  white-space: nowrap;
+}
+
+pre {
+  background-color: #eee;
+  padding: 10px;
+  font-size: 11px;
+}
+
+a {
+  color: #000;
+
+  &:visited {
+    color: #666;
+  }
+
+  &:hover {
+    color: #fff;
+    background-color: #000;
+  }
+}
+
+div {
+  &.field, &.actions {
+    margin-bottom: 10px;
+  }
+}
+
+#notice {
+  color: green;
+}
+
+.field_with_errors {
+  padding: 2px;
+  background-color: red;
+  display: table;
+}
+
+#error_explanation {
+  width: 450px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+
+  h2 {
+    text-align: left;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px;
+    margin-bottom: 0;
+    background-color: #c00;
+    color: #fff;
+  }
+
+  ul li {
+    font-size: 12px;
+    list-style: square;
+  }
+}
+
+label {
+  display: block;
+}
+
+//League, Team, Match, Player
 
 th {
   padding: 5px;
@@ -26,12 +110,54 @@ td {
   padding: 5px;
 }
 
+//Home page
+.img-fluid{
+    width: 100px;
+    height: 50px;
+   background-color: black;
+
+}
+.nav-sidebar{
+  background-color: black;
+}
+
+.img-cup{
+  width: 100%;
+  height: 325px;
+}
+
+.img-intel{
+  width: 20%;
+  height: 100px;
+}
+
+.text-main{
+  font-style: italic;
+  font-size: 15px;
+  color: white;
+}
+
+.text-bold{
+  font-style: oblique;
+  font-size: 20px;
+  color: white;
+}
+
+.nav-sidebar{
+    border-style: solid;
+    border-bottom-style: none;
+}
+
+//Nav bar split buttons
+
 .header-pad {
   padding-top: 5px;
   padding-bottom: 5px;
   padding-right: 10px;
   padding-left: 10px;
 }
+
+//Teams
 
 li.teams {
   list-style-type: none;
@@ -40,6 +166,8 @@ li.teams {
 p.no_matches {
   font-weight: bold;
 }
+
+//Players
 
 li.players {
   list-style-type: none;
