--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -115,10 +115,14 @@
           <li class="header-pad">
             <%= link_to "Teams", teams_path%>
           </li>
+          <li class="header-pad">
+            <%= link_to "Players", players_path%>
+          </li>
             <li class="header-pad">
 
 <% if user_signed_in? %>
 <Signed in as <%= current_user.email %>. Not You?
+<%= link_to "Hello, #{current_user.first_name}","#" %></li>
 <%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "btn btn-secondary" %>
 <% else %>
 </li>
