--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -16,7 +16,7 @@
   </thead>
 
   <tbody>
-    <% @players.each do |player|; user = user = User.where(player_id: player.id).first %>
+    <% @players.each do |player|; user = User.where(player_id: player.id).first %>
       <tr>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
